<resources>
    <string name="app_name">Bodeguin</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_account">don\'t have an account?</string>
    <string name="registry">Enter here</string>
    <string name="exit_text">One more time to exit</string>
    <string name="registry_account">Registry</string>
    <string name="logout">Logout</string>
    <string name="subtitle_register">Your incredible experience starts here</string>
    <string name="signUp">SIGN UP</string>
    <string name="direction">Direction</string>
    <string name="dni">Dni</string>
    <string name="lastName_mother">Mother\'s last name</string>
    <string name="lastName_father">Father\'s last name</string>
    <string name="name">Name</string>
    <string name="img_logo">App\'s logo</string>
    <string name="return_notification">Come back soon</string>
    <string name="title_notification">See you</string>
    <string name="welcome_text">Welcome!</string>
    <string name="body_text">Sign in to continue with your incredible experience</string>
    <string name="wrong_credentials">Invalid email or password</string>
    <string name="empty_credentials">Email or Password must be complete</string>
    <string name="not_internet">Make sure you have an active data connection</string>
    <string name="no_connection_services">We have a  connection error to the services, please try later.</string>
    <string name="empty_inputs">All inputs must be completed</string>
    <string name="login_error">Your user was created but we have problems to login, please try again.</string>
    <string name="register_error">We had problems to register your user, try again later.</string>
    <string name="wrong_inputs">Some inputs were wrong, check them again.</string>
    <string name="personal_data">Personal information</string>
    <string name="user_detail">User detail</string>
    <string name="save">Save</string>
    <string name="store">Stores</string>
    <string name="search">Search</string>
    <string name="store_name">Store Name</string>
    <string name="store_description">Store Description</string>
    <string name="store_direction">Store Direction</string>
    <string name="see_more">See stores</string>
    <string name="history_purchase">Purchase history</string>
    <string name="exist_email">The email is already associated with a user</string>
    <string name="no_exist_user">The user doesn\'t exist</string>
    <string name="wrong_password">Wrong password</string>
    <string name="error_getstore">We have problems to get the stores near you</string>
    <string name="error_getproducts">We have problems to get the products</string>
    <string name="error_getcategories">We have problems to get the categories</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="currency">$</string>
    <string name="stock">Stock:</string>
    <string name="add_cart">ADD TO CART</string>
    <string name="good_price">Good price of</string>
    <string name="x">x</string>
    <string name="total">Total</string>
    <string name="no_price">0.00</string>
    <string name="buy_now">Buy Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="payment">Payment method</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="buy">Buy</string>
    <string name="add_product_cart">The product was added to the shopping cart</string>
    <string name="register_sale">Registered sale</string>
    <string name="out_stock">The product is out of stock</string>
    <string name="no_items_cart">There are no products in the cart</string>
</resources>