<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/iShopping"
        android:icon="@drawable/shopping_cart"
        android:title="@string/shopping_cart"
        app:showAsAction="ifRoom"
        android:state_checked="true"
        android:color="@color/colorPrimaryDark"/>
    <item
        android:id="@+id/iHome"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:state_checked="true"
        android:color="@color/colorPrimaryDark"/>
    <item
        android:id="@+id/iProfile"
        android:icon="@drawable/account_circle"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:state_checked="true"
        android:color="@color/colorPrimaryDark"/>
</menu>